# pathtracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bsdf.c  bsdf.h  camera.c  camera.h  debug.h  geometry.c  geometry.h  image_buffer.c  image_buffer.h  intersections.c  intersections.h  main.c  multithreading.c  multithreading.h  sampling.c  sampling.h  scene.c  scene.h  shading.c  window.c  window.h
src/: bsdf.c  bsdf.h  camera.c  camera.h  constants.h  debug.h  geometry.c  geometry.h  globals.h  image_buffer.c  image_buffer.h  intersections.c  intersections.h  main.c  multithreading.c  sampling.c  scene.c  scene.h  shading.c  shading.h  triangle_mesh.c  triangle_mesh.h  window.c  window.h
